--- a/css/main.css
+++ b/css/main.css
@@ -1,27 +1,30 @@
-body{
+body {
     max-width: 820px;
     margin: 0 auto;
 }
 
-header, footer {
-    background-color:rgb(139, 152, 187) ;
-    color:rgb(0, 0, 0);
+header,
+footer {
+    background-color: rgb(139, 152, 187);
+    color: rgb(0, 0, 0);
     padding: 1em;
     font-family: Arial, Helvetica, sans-serif;
-    padding-left:75px;
+    padding-left: 75px;
     border-radius: 10px 10px 10px 10px;
 }
-footer{
-    font-size:12px;
+
+footer {
+    font-size: 12px;
 
 }
+
 div img {
-    float:right;
+    float: right;
     width: 220px;
-    margin-top:-50px;
-margin-right: 60px;
-border-radius: 10px 10px 10px 10px;
-box-shadow: 5px 5px 5px rgb(77, 77, 77);
+    margin-top: -50px;
+    margin-right: 60px;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 5px 5px 5px rgb(77, 77, 77);
 }
 
 html {
@@ -29,8 +32,8 @@ html {
 }
 
 main {
-     padding-top: 15px;
-    padding-bottom:15px;
+    padding-top: 15px;
+    padding-bottom: 15px;
 }
 
 ul {
@@ -38,7 +41,8 @@ ul {
     font-family: monospace;
     font-size: 15px;
 }
-.mainheading{
-    padding-left:75px;
+
+.mainheading {
+    padding-left: 75px;
     font-family: Arial, Helvetica, sans-serif;
 }
