--- a/css/main.css
+++ b/css/main.css
@@ -8,14 +8,18 @@ footer {
     background-color: rgb(139, 152, 187);
     color: rgb(0, 0, 0);
     padding: 1em;
-    font-family: Arial, Helvetica, sans-serif;
     padding-left: 75px;
     border-radius: 10px 10px 10px 10px;
 }
 
 footer {
     font-size: 12px;
+    font-family: 'Libre Franklin', sans-serif;
 
+}
+
+header{
+    font-family: 'Anton', sans-serif;
 }
 
 div img {
@@ -38,11 +42,11 @@ main {
 
 ul {
     padding-left: 110px;
-    font-family: monospace;
+    font-family: 'Libre Franklin', sans-serif;
     font-size: 15px;
 }
 
 .mainheading {
     padding-left: 75px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Libre Franklin', sans-serif;
 }
