--- a/week1/css/small.css
+++ b/week1/css/small.css
@@ -14,12 +14,12 @@ footer {
 
 footer {
     font-size: 9px;
-    font-family: 'Libre Franklin', sans-serif;
+    font-family: 'Lato', sans-serif;
 
 }
 
 header{
-    font-family: 'Anton', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 header img {
@@ -39,12 +39,12 @@ main {
 
 ul {
     padding-left: 110px;
-    font-family: 'Libre Franklin', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 12px;
 }
 
 .mainheading {
     padding-left: 75px;
-    font-family: 'Libre Franklin', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 14px;
 }
