--- a/week2/css/small.css
+++ b/week2/css/small.css
@@ -1,13 +1,13 @@
 body {
     font-size: 14px;
     background-color: rgb(201, 201, 209);
-    font-family: Lato, arial, sans-serif;
+    font-family: 'Lato', sans-serif;
 }
 
 section {
     border-style: solid;
     border-width: 1px;
-    border-radius: 10px;
+    border-radius: 10px 10px 10px 10px;
     margin: 10px 0px;
     padding: 10px;
     background-color: rgb(233, 233, 233);
@@ -59,7 +59,7 @@ section .description {
 }
 header, footer {
     text-align: center;
-    border-radius: 0px;
+    border-radius: 10px 10px 10px 10px;
     padding: 1.5em 4em;
     background-color:rgb(139, 152, 187);
     max-width: 100%;
@@ -72,7 +72,7 @@ header, main, footer {
 
 header h1 {
     font-size: 2.5em;
-    font-family: 'Sriracha', cursive;
+    font-family: 'Roboto', sans-serif;
     margin: 0px 0px 20px 0px;
 }
 
