--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -11,6 +11,7 @@
     
     header h1 {
         font-size: 27px;
+
     }
 
     nav button {
@@ -19,8 +20,37 @@
 
     footer {
         font-size: 14px;
+        margin-top: 10px;
+
     }
 
+    td img {
+        width: 50px;
+        height: auto;
+    }
     
+    .cloudy {
+        width: 60px;
+        height: auto;
+    }
+
+    th, td {
+  padding: 20px;
+  border: solid 1px;
+  text-align: center;
+  font-size: 20px;
+    }
+
+    table td p.daily-temp {
+        font-size: 19px;
+    }
+
+    img.map {
+        display: block;
+        float: left;
+        margin: 5%;
+        width: 250px;
+        height: auto;
+    }
 
 }
