--- a/lesson11/home/css/medium.css
+++ b/lesson11/home/css/medium.css
@@ -8,7 +8,7 @@
     .subtitle {
         font-size: 1rem;
     }
-    
+
     header h1 {
         font-size: 27px;
 
@@ -28,17 +28,18 @@
         width: 50px;
         height: auto;
     }
-    
+
     .cloudy {
         width: 60px;
         height: auto;
     }
 
-    th, td {
-  padding: 20px;
-  border: solid 1px;
-  text-align: center;
-  font-size: 20px;
+    th,
+    td {
+        padding: 20px;
+        border: solid 1px;
+        text-align: center;
+        font-size: 20px;
     }
 
     table td p.daily-temp {
@@ -53,7 +54,14 @@
         height: auto;
     }
 
-    .Gallery {grid-template-columns: 1fr 1fr;}
-  
+
+    .box section {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .box section:nth-child(odd) {
+        flex-direction: row-reverse;
+    }
 
 }
