--- a/lesson11/preston/css/small.css
+++ b/lesson11/preston/css/small.css
@@ -234,3 +234,9 @@ img.social {
     text-align: center;
 
 }
+
+.events {
+    border: solid 5px #778DA9;
+    margin: 15px;
+    text-align: center;
+}
