--- a/lesson12/home/css/medium.css
+++ b/lesson12/home/css/medium.css
@@ -1,16 +1,7 @@
 @media only screen and (min-width: 37.5em) {
 
-    header img {
-        width: 105px;
-        height: auto;
-    }
-
-    .subtitle {
-        font-size: 1rem;
-    }
-
     header h1 {
-        font-size: 27px;
+        font-size: 35px;
 
     }
 
@@ -19,49 +10,17 @@
     }
 
     footer {
-        font-size: 14px;
+        font-size: 18px;
         margin-top: 10px;
 
     }
 
-    td img {
-        width: 50px;
-        height: auto;
-    }
-
-    .cloudy {
-        width: 60px;
-        height: auto;
-    }
-
-    th,
-    td {
-        padding: 20px;
-        border: solid 1px;
-        text-align: center;
-        font-size: 20px;
-    }
-
-    table td p.daily-temp {
-        font-size: 19px;
-    }
-
-    img.map {
-        display: block;
-        float: left;
-        margin: 5%;
-        width: 250px;
-        height: auto;
-    }
-
+    .box {
+        grid-template-columns: 1fr 1fr;        
+      }
 
     .box section {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .box section:nth-child(odd) {
-        flex-direction: row-reverse;
+        display: block;
     }
 
 }
