--- a/lesson12/home/css/medium.css
+++ b/lesson12/home/css/medium.css
@@ -1,7 +1,7 @@
 @media only screen and (min-width: 37.5em) {
 
     header h1 {
-        font-size: 35px;
+        font-size: 40px;
 
     }
 
@@ -15,12 +15,41 @@
 
     }
 
+    main h2 {
+        font-size: 35px;
+    }
+    .invite p{
+        font-size: 18px;
+    }
+
+    main p {
+        font-size: 18px;
+    }
+
+    .mission h3, .upcomingevents h3, .forecast h3, .highlights h2, .weather-corner h3 {
+        font-size: 25px;
+        margin-top: 25px;
+        border: 3px solid #002529;
+        padding: 10px;
+    }
+
+    .gridone {
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
+    }
+
+    .gridtwo {
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
+    }
+
     .box {
-        grid-template-columns: 1fr 1fr;        
-      }
+        grid-template-columns: 1fr 1fr;
+    }
 
     .box section {
         display: block;
+        margin: 0 auto;
     }
 
 }
