--- a/lesson12/directory/css/large.css
+++ b/lesson12/directory/css/large.css
@@ -26,32 +26,44 @@
     }
 
     header h1 {
-        font-size: 30px;
+        font-size: 55px;
     }
 
     .heroimg {
-        height: 100%;
-        width: 100%;
-        max-width: 100%;
-        object-fit:cover;
-        padding: 0px;
-        margin: 0px;
         position: relative;
         display:block;
         
 }  
 
-    .stats {
-        background-color: #778DA9;
+    .invite {
         position: absolute;
-        top: 17rem;
-        left: 25rem;
-        padding: 1.5rem;
-        color: white;
-        padding: 0.5rem;
-        padding-left: 50px;
-        padding-right: 50px;  
-        margin: 0;
+        margin-top: -25%;
+        text-align: center;
+        margin-left: 20%;
+        color: #edf6f9;
+    }
+
+    footer {
+        font-size: 18px;
+        margin-top: 10px;
+
+    }
+
+    main h2 {
+        font-size: 60px;
+        color: #edf6f9;
+    }
+
+
+    main p {
+        font-size: 18px;
+    }
+
+    .mission h3, .upcomingevents h3, .forecast h3, .highlights h2, .weather-corner h3 {
+        font-size: 25px;
+        margin-top: 25px;
+        border: 3px solid #002529;
+        padding: 10px;
     }
     
     .box {
@@ -60,6 +72,6 @@
 
     .box section {
         display: block;
-        
-      }
+        margin: 0 auto;
+    }
 }
