--- a/lesson12/directory/css/medium.css
+++ b/lesson12/directory/css/medium.css
@@ -1,16 +1,7 @@
 @media only screen and (min-width: 37.5em) {
 
-    header img {
-        width: 105px;
-        height: auto;
-    }
-
-    .subtitle {
-        font-size: 1rem;
-    }
-
     header h1 {
-        font-size: 27px;
+        font-size: 40px;
 
     }
 
@@ -19,49 +10,46 @@
     }
 
     footer {
-        font-size: 14px;
+        font-size: 18px;
         margin-top: 10px;
 
     }
 
-    td img {
-        width: 50px;
-        height: auto;
+    main h2 {
+        font-size: 35px;
+    }
+    .invite p{
+        font-size: 18px;
     }
 
-    .cloudy {
-        width: 60px;
-        height: auto;
+    main p {
+        font-size: 18px;
     }
 
-    th,
-    td {
-        padding: 20px;
-        border: solid 1px;
-        text-align: center;
-        font-size: 20px;
+    .mission h3, .upcomingevents h3, .forecast h3, .highlights h2, .weather-corner h3 {
+        font-size: 25px;
+        margin-top: 25px;
+        border: 3px solid #002529;
+        padding: 10px;
     }
 
-    table td p.daily-temp {
-        font-size: 19px;
+    .gridone {
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
     }
 
-    img.map {
-        display: block;
-        float: left;
-        margin: 5%;
-        width: 250px;
-        height: auto;
+    .gridtwo {
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 10px;
     }
 
+    .box {
+        grid-template-columns: 1fr 1fr;
+    }
 
     .box section {
-        display: flex;
-        flex-direction: row;
-    }
-
-    .box section:nth-child(odd) {
-        flex-direction: row-reverse;
+        display: block;
+        margin: 0 auto;
     }
 
 }
